# DataDrivenSurveys

./: .editorconfig  .env.deploy  .gitattributes  .gitignore  .prettierignore  .vale.ini  AUTHORS  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  append_echo.sh  backend.Dockerfile  certbot.Dockerfile  compose.deploy.yml  compose.deploy_alt.yml  compose.dev.yml  compose.yaml  compose.yml  configdocker.py  configure-docker-platform.sh  coverage_extra_css.css  deploy.sh  deploy_alt.sh  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yaml  frontend.Dockerfile  pyproject.toml  ruff.toml  ruff_defaults.toml  run.py  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: backend-bug-report.md  backend-feature-request.md  blank-issue.md  ui-bug-report.md  ui-feature-request.md
.github/workflows/: deploy.yaml  deploy.yml  deploy_non_parallel.yml  test_workflow.yml
ddsurveys/: .env  .env.development  .env.production  .env.testing  __init__.py  api_responses.py  app.py  constants.py  dynamic_import.py  entrypoint.sh  get_logger.py  main.py  models.py  requirements.txt  run.py  shared_bases.py  utils.py  variable_types.py  wsgi.py
ddsurveys/alembic/: env.py
ddsurveys/alembic/versions/: 293a599bb7e5_short_id.py  30fd4d9401eb_move_survey_integrator_fields_into_the_.py  47e9170725eb_rem_connected_field_data_connections.py  8638783a66d2_add_github_to_enum.py  8ff18ebf7f7f_project_status_to_survey_status.py  991bc07484f8_initial_database_schema.py  b5bfb7d24579_add_last_sync_to_project.py  da503e3b823b_survey_status.py  daf7e3007775_data_provider_type_to_name_add_data_.py  ea9752b24acf_big_integer.py
ddsurveys/blueprints/: __init__.py  _common.py  _responses.py  auth.py  custom_variables.py  data_providers.py  projects.py  respondent.py  survey_platforms.py
ddsurveys/data_providers/: __init__.py  bases.py  data_categories.py  date_ranges.py  dds.py  fitbit.py  github.py  google_contacts.py  instagram.py  nlp.py  spotify.py  template.py  template_simple.py  utils.py  variables.py
ddsurveys/data_providers/fitbit/: __init__.py  account.py  active_minutes.py  activities.py  activity_log.py  api_response_dicts.py  badges.py  daily.py  daily_time_series.py  steps.py
ddsurveys/data_providers/google_contacts/: __init__.py  api_response_dicts.py  people.py
ddsurveys/data_providers/googlecontacts/: __init__.py  api_response_dicts.py  people.py
ddsurveys/data_providers/spotify/: __init__.py  account.py  artist.py  devices.py  episode.py  genres.py  playlist.py  shows.py  tracks.py
ddsurveys/data_providers/template_complex/: __init__.py  api.py  complex.py  data_category.py  template_complex.py
ddsurveys/data_providers/utils/: __init__.py  language_detector.py  text_structure_analyzer.py
ddsurveys/survey_platforms/: __init__.py  bases.py  exceptions.py
ddsurveys/survey_platforms/qualtrics/: __init__.py  embedded_data.py  flow.py  flow_tree.py
ddsurveys/survey_platforms/qualtrics/api/: __init__.py  distributions.py  exceptions.py  qualtrics_requests.py  surveys.py
ddsurveys/survey_platforms/surveymonkey/: __init__.py
ddsurveys/survey_platforms/template/: __init__.py
ddsurveys/survey_platforms/template_oauth/: __init__.py
ddsurveys/typings/: __init__.py  models.py  shared_bases.py  variable_types.py
ddsurveys/typings/data_providers/: __init__.py  bases.py  data_categories.py  variables.py
ddsurveys/typings/survey_platforms/: bases.py
demos/: create_initial_custom_variables_in_qualtrics.py  participant_flow_qualtrics.py  update_custom_variables_on_qualtrics.py
diagrams/: data_providers.md  database.md  download_data_flow.md  journey_participant.md  participant_flow.md  researcher_flow.md  sequence_diagram_researcher_project_creation.md  sequence_participant.md  sequence_researcher_download_data.md
doc/source/: Makefile  conf.py  index.rst  intro.md
doc/source/deployment/: db_migrations.md  deploy.md  docker.md  dockerised_dev.md  index.rst
doc/source/python_library/: index.rst  intro.md
frontend/: .env.production  .env.test  .gitignore  .pnp.cjs  .prettierrc  .yarnrc.yml  Dockerfile  README.md  depcheck.js  depcheck.ts  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  robots-generator.ts  sitemap-generator.ts  stylelint.config.js  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.test.tsx  App.tsx  index.js  index.tsx  reportWebVitals.ts
frontend/src/backendObjects/: Project.ts  ResponseReturnValue.ts
frontend/src/code/: http_requests.js
frontend/src/components/: HelperText.js  HelperText.tsx  Logo.js  Logo.tsx
frontend/src/components/auth/: AuthUser.jsx  (+9 more)
frontend/src/context/: AuthContext.js  AuthContext.jsx  AuthContext.tsx  SnackbarContext.js  SnackbarContext.jsx  SnackbarContext.tsx
frontend/src/hook/: useInput.jsx
frontend/src/i18n/: i18n.js  i18n.tsx  resources.json
frontend/src/pages/: PageCreateProject.jsx  PageCreateProject.tsx  PageHomepage.tsx  PageParticipantConnection.tsx  PageParticipantOauth2Redirect.jsx  PageParticipantOauth2Redirect.tsx  PagePrivacyPolicy.tsx  PageProject.tsx  PageProjectSelection.tsx  PageSignIn.tsx  PageSignUp.tsx  PageSurveyPlatformOauth2Redirect.jsx  PageSurveyPlatformOauth2Redirect.tsx  PageTermsOfService.tsx
frontend/src/styles/: normalize.css
frontend/src/types/: Shared.ts  index.ts  loadable.d.ts
scripts/: generate_ids.py  post_install.py  qualtrics_api_test.fish  update_spacy_models.py
tests/: __init__.py  conftest.py  pytest.ini
tests/ddsurveys/: __init__.py
tests/ddsurveys/api/: __init__.py  conftest.py  mocks.py  test_api_auth.py  test_api_project.py
tests/ddsurveys/data_providers/: __init__.py  test_custom_variables.py  test_data_categories.py  test_data_provider.py  test_fitbit.py
tests/ddsurveys/survey_platforms/: __init__.py  test_survey_platforms.py
tests/ddsurveys/utils/: __init__.py  custom_variables_scenarios_data.py  functions.py  mock_data.py
volumes/certbot/: certbot-entrypoint.sh
volumes/nginx/: nginx-entrypoint.sh  nginx.conf  nginx.conf.template  obtain-ssl-certificate.sh
(+164 files in other folders)
